Zero: non-PCH release build fails after JDK-8258074

XMLWordPrintable

    • b04
    • generic
    • generic

      using configure arguments '--with-boot-jdk=/mnt/share/openjdk/packages/boot-jdk/aarch64/master --disable-precompiled-headers --with-debug-level=release --with-version-opt=git-12297a00e –
      with-jvm-variants=zero --with-gtest=/mnt/share/openjdk/tools/googletest'.Configuration summary:

      Name: /home/haosun01/tmp/tmp/build-release
      Debug level: release
      HS debug level: product
      JVM variants: zero
      JVM features: zero: 'epsilongc g1gc jni-check jvmti management nmt parallelgc serialgc services shenandoahgc vm-structs zero'* OpenJDK target: OS: linux, CPU architecture: aarch64, address length: 64
      Version string: 17-internal+0-git-12297a00e (17-internal)Tools summary:
      Boot JDK: openjdk version "17-internal" 2021-09-14 OpenJDK Runtime Environment (build 17-internal+0-adhoc.alahay01.gerritjdk) OpenJDK 64-Bit Server VM (build 17-internal+0-adhoc.a
      lahay01.gerritjdk, mixed mode, sharing) (at /mnt/share/openjdk/packages/boot-jdk/aarch64/master)
      Toolchain: gcc (GNU Compiler Collection)
      C Compiler: Version 10.2.0 (at /usr/bin/gcc)
      C++ Compiler: Version 10.2.0 (at /usr/bin/g++)Build performance summary:
      Cores to use: 125
      Memory limit: 128821 MB




      Updating support/src.zip
      In file included from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/compiler/compiler_globals.hpp:28,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/runtime/flags/allFlags.hpp:28,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/runtime/globals_extension.hpp:28,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/cpu/zero/vm_version_zero.hpp:30,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/runtime/vm_version.hpp:29,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/cpu/zero/register_zero.hpp:30,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/asm/register.hpp:98,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/code/vmreg.hpp:28,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/compiler/oopMap.hpp:29,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/oops/method.hpp:30,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/interpreter/bytecode.hpp:30,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/interpreter/bytecodeStream.hpp:28,
                       from /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/interpreter/bytecodeStream.cpp:26:
      /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/runtime/globals_shared.hpp:86:77: error: 'pd_CICompileOSR' was not declared in this scope; did you mean 'CICompileOSR'?
         86 | #define DECLARE_PD_DEVELOPER_FLAG(type, name, ...) const type name = pd_##name;
            | ^~~
      /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/compiler/compiler_globals.hpp:77:3: note: in expansion of macro 'DECLARE_PD_DEVELOPER_FLAG'
         77 | develop_pd(bool, CICompileOSR, \
            | ^~~~~~~~~~
      /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/runtime/globals_shared.hpp:95:5: note: in expansion of macro 'COMPILER_FLAGS'
         95 | flag_group(DECLARE_DEVELOPER_FLAG, \
            | ^~~~~~~~~~
      /home/haosun01/tmp/tmp/jdk_src/src/hotspot/share/compiler/compiler_globals.hpp:447:1: note: in expansion of macro 'DECLARE_FLAGS'
        447 | DECLARE_FLAGS(COMPILER_FLAGS)
            | ^~~~~~~~~~~~~

            Assignee:
            Eric Liu
            Reporter:
            Eric Liu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: