8258857: Zero: non-PCH build fails after JDK-8258074

From the error log we can see the root cause is that, develop_pd flag
'pd_CICompileOSR' is undeclared in zero build.

Where this flag is used?
Flag 'pd_CICompileOSR' is assigned to flag 'CICompileOSR'. See line 77
of 'compiler_globals.hpp' and further line 86 of 'globals_shared.hpp'.

Where this flag can be declared?
Header files 'c1_globals.hpp' or 'c2_globals.hpp' would be included if
VM is built with compiler1 or compiler2. See lines 30 to 38 of
'complier_globals.hpp'. And further, flag 'pd_CICompileOSR' may get
declared in the header files for specific arch, e.g.,
'c1_globals_aarch64.hpp', 'c2_globals_aarch64.hpp'.
However, regarding zero build (without compiler1 and compiler2 and
jvmci) , this flag is undelcared. Hence, this patch gets header file
'compiler/compiler_globals_pd.hpp' included where this flag is declared
for the case when neither COMPILER1 nor COMPILER2 are defined and
INCLUDE_JVMCI is inactive.

Note that 'compiler/compiler_globals_pd.hpp' already includes
'runtime/globals_shared.hpp'.

Note that zero build with PCH succeeds because 'runtime/globals.hpp' is
included in 'precompiled.hpp', and further 'compiler_globals_pd.hpp' is
included in 'runtime/globals.hpp'.